<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">

    <TextView
        android:id="@+id/fileNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name_title"
        android:textColor="@color/propertyTextColor"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/fileNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/valueTextColor"
        android:textSize="@dimen/default_text_size"
        tools:text="Glide - Image Loading Library by BumpTech" />

    <TextView
        android:id="@+id/statusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_title"
        android:textColor="@color/propertyTextColor"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/statusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/valueTextColor"
        android:textSize="@dimen/default_text_size"
        tools:text="Success" />

    <Button
        android:id="@+id/openFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_file_button"
        android:visibility="invisible" />
</androidx.constraintlayout.motion.widget.MotionLayout>